src/sass/general.scss
@import 'bootstrap/scss/bootstrap';
@import '@fortawesome/fontawesome-free';

body {
    overflow-x: hidden;
}

img{
    max-width: 100%;
}


.hide{
    display:none;
}

.cutText {
    display: block;
    width: 95%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.form-container{
    height: 50vh;
}

.img-container{
    width: 100%;
    img{
        width: 100%;
        aspect-ratio: 1;
        object-fit: cover;
    }
}

